<resources>
    <string name="kTabBarNameMarkets">Markets</string>
    <string name="kTabBarNameCollateral">Borrow</string>
    <string name="kTabBarNameServices">Services</string>
    <string name="kTabBarNameMy">Account</string>
    <string name="kLable24HVol">24HVol</string>
    <string name="kLabelMarketFavorites">Favorites</string>
    <string name="kLabelGroupNameMain">Main</string>
    <string name="kLabelGroupNameCommunity">Community</string>
    <string name="kLabelGroupNameGDEX">GDEX(Gateway)</string>
    <string name="kLabelGroupNameWWW">WWW(Gateway)</string>
    <string name="kLabelGroupNameOPEN">OPEN(Gateway)</string>
    <string name="kLabelGroupNameWIN">WIN(Gateway)</string>
    <string name="kLabelGroupNameOther">Other</string>
    <string name="kLabelGroupIntroduction">Introduction &gt;</string>
    <string name="kLabelNoFavMarket">You have not added any favorites market.</string>
    <string name="kLabelBtnNameAddPair">Add</string>
    <string name="kLabelTitleAssetQuote">Quote</string>
    <string name="kLabelTitleAssetBase">Base</string>
    <string name="kVcMyPairSubmitTipMissQuoteAsset">Please select the quote asset.</string>
    <string name="kVcMyPairSubmitTipMissBaseAsset">Please select the base asset.</string>
    <string name="kVcMyPairSubmitTipQuoteBaseIsSame">Quote asset and base asset cannot be the same.</string>
    <string name="kVcMyPairSubmitTipPairIsAlreadyExist">The pair already exists.</string>
    <string name="kDebtLableReset">Reset</string>
    <string name="kDebtLableSelectAsset">Select asset</string>
    <string name="kDebtLableFeedPrice">Feed price</string>
    <string name="kDebtLableCallPrice">Call price</string>
    <string name="kDebtLablePayMaxDebt">Pay Debt</string>
    <string name="kDebtLableUseMax">All</string>
    <string name="kDebtLableAvailable">Available</string>
    <string name="kDebtLableRatio">Ratio</string>
    <string name="kDebtLableUpdatePosition">Update position</string>
    <string name="kDebtLableLogin">Login</string>
    <string name="kDebtLabelCellTitleDebtValue">Debt</string>
    <string name="kDebtLabelCellTitleCollAmount">Margin</string>
    <string name="kDebtTipSelectDebtAsset">Please select the asset to borrow</string>
    <string name="kDebtTipInputDebtValue">Please input debt value</string>
    <string name="kDebtTipInputCollAmount">Please input collateral amount</string>
    <string name="kDebtTipPleaseInputDebtValueFirst">Please enter the debt value first.</string>
    <string name="kDebtTipPleaseAdjustRatioFirst">Please adjust the ratio first.</string>
    <string name="kDebtTipTargetRatioNotSet">Target ratio not set</string>
    <string name="kDebtTipTargetRatio">Target ratio</string>
    <string name="kDebtTipTitleFeedAndCallPrice">Feed &amp; Call price</string>
    <string name="kDebtTipTitleWhatIsRatio">What is the ratio?</string>
    <string name="kDebtTipTitleWhatIsTargetRatio">What is the target ratio?</string>
    <string name="kDebtTipNetworkErrorPleaseRefresh">The network is abnormal. Please refresh the interface again.</string>
    <string name="kDebtTipAssetHasGlobalSettled">The asset has been global settled and cannot update position.</string>
    <string name="kDebtTipAssetNoValidFeedData">The asset has no feed data and and cannot update position </string>
    <string name="kDebtTipCollRatioCannotLessThanMCR">The ratio cannot be lower than %s.</string>
    <string name="kDebtTipCannotAdjustMoreLowerRatio">You are already in a forced sale and you cannot reduce the ratio.</string>
    <string name="kDebtTipValueAndAmountNotChange">The amount of borrowings and collateral did not change.</string>
    <string name="kDebtTipCollNotEnough">The collateral balance is insufficient.</string>
    <string name="kDebtTipAvailableNotEnough">%s balance is insufficient, please adjust the amount of repayment.</string>
    <string name="kDebtTipRatioTooLow">The ratio is lower than %s and you cannot borrow more.</string>
    <string name="kDebtTipTxUpdatePositionFullOK">Update position successfully.</string>
    <string name="kDebtTipTxUpdatePositionOK">Update position successfully, but the refresh failed. Please try again later.</string>
    <string name="kDebtWarmTips">[Tips]\n1. When the feed price drops to the call price, the system will automatically sell your collateral assets for debt repayment. Please pay attention to adjusting the ratio control risks. \n2. When the debt field is locked, the ratio will change with the collateral. \n3. When the ratio field is locked, the debt will change with the collateral.</string>
    <string name="kDebtWarmTipsForPM">[Tips] \nThe current asset is a predicted market asset. The amount of borrowing and collateral is constant at 1: 1.</string>
    <string name="kServicesCellLabelQrScan">Scan QR code</string>
    <string name="kServicesCellLabelTransfer">Transfer</string>
    <string name="kServicesCellLabelAccountSearch">Account search</string>
    <string name="kServicesCellLabelRank">Rank</string>
    <string name="kServicesCellLabelVoting">Voting</string>
    <string name="kServicesCellLabelSmartCoin">Smartcoin</string>
    <string name="kServicesCellLabelFeedPrice">Feed price details</string>
    <string name="kServicesCellLabelOtcUser">OTC</string>
    <string name="kServicesCellLabelOtcMerchant">Merchant</string>
    <string name="kServicesCellLabelDepositWithdraw">Gateways</string>
    <string name="kServicesCellLabelAdvFunction">Advanced Features</string>
    <string name="kServicesCellLabelBtsExplorer">Explorer</string>
    <string name="kVcScanPermissionNoCamera">Your camera is not detected.</string>
    <string name="kVcScanPermissionSystemLimit">The album could not be accessed for system reasons.</string>
    <string name="kVcScanPermissionGotoSetting">Please go to the settings interface to allow the app to access the camera.</string>
    <string name="kVcScanPermissionUserRejected">This feature is not supported without camera permissions.</string>
    <string name="kVcScanAlbumClickedTips">Select QR code image</string>
    <string name="kVcScanNaviTitleRightAlbum">Album</string>
    <string name="kVcScanAutoScanTips">Put the QR code inside the border.</string>
    <string name="kVcScanProcessingResult">Processing…</string>
    <string name="kVcScanNoQrCode">No QR code found.</string>
    <string name="kVcScanResultPriKeyTypeTitle">Key type</string>
    <string name="kVcScanResultPriKeyTypeOwner">Owner</string>
    <string name="kVcScanResultPriKeyTypeActive">Active</string>
    <string name="kVcScanResultPriKeyTypeMemo">Memo</string>
    <string name="kVcScanResultPriKeyBtnCreateAndImport">Create wallet &amp; import key</string>
    <string name="kVcScanResultPriKeyBtnImportNow">Import now</string>
    <string name="kVcScanResultAccountBtnTransfer">Transfer</string>
    <string name="kVcScanResultAccountBtnViewDetail">Account details</string>
    <string name="kVcScanResultPayLabelAmount">Amount</string>
    <string name="kVcScanResultPayLabelMemo">Memo</string>
    <string name="kVcScanResultPaySubmitTipsToIsMyself">The payee is the same as the payment account.</string>
    <string name="kVcScanResultPlaceholderInputPayAmount">Please enter the payment amount</string>
    <string name="kVcScanResultPaySubmitTipsInputPayAmount">Please enter the payment amount.</string>
    <string name="kVcScanResultPaySubmitTipsNotEnough">Insufficient balance.</string>
    <string name="kVcScanResultBtnPayNow">Pay now</string>
    <string name="kVcScanResultTipsPaySuccess">Payment completed</string>
    <string name="kVcScanResultPaySuccessLabelTo">Receiver</string>
    <string name="kVcScanResultPaySuccessLabelTrxID">Trx ID</string>
    <string name="kVcScanResultPaySuccessBtnDone">Done</string>
    <string name="kVcSmartPageTitleRank">Rank</string>
    <string name="kVcSmartPageTitleFeed">Feed price</string>
    <string name="kVcRankCurrentFeedPrice">Feed price</string>
    <string name="kVcTipsNoCallOrder">No data</string>
    <string name="kVcRankRatio">Ratio </string>
    <string name="kVcRankCallPrice">Call price</string>
    <string name="kVcRankColl">Collateral</string>
    <string name="kVcRankDebt">Debt</string>
    <string name="kVcRankFlagWillSettlement">settlement soon</string>
    <string name="kVcFeedNoFeedData">No feed price data</string>
    <string name="kVcFeedCurrentFeedPrice">Feed price</string>
    <string name="kVcFeedWitnessName">Witness</string>
    <string name="kVcFeedPublisherCommitteeName">Committee</string>
    <string name="kVcFeedPublisherCustom">Producer</string>
    <string name="kVcFeedPriceName">Price</string>
    <string name="kVcFeedRate">Bias</string>
    <string name="kVcFeedPublishDate">Time</string>
    <string name="kVcFeedNoData">no data</string>
    <string name="kVcFeedExpired">expired</string>
    <string name="kVcFeedNsecAgo">%s secs ago</string>
    <string name="kVcFeedNminAgo">%s mins ago</string>
    <string name="kVcFeedNhourAgo">%s hours ago</string>
    <string name="kVcFeedNDayAgo">%d days ago</string>
    <string name="kVcDWCellLabelCurrGateway">Gateway</string>
    <string name="kVcDWTipsSelectGateway">Please select a gateway</string>
    <string name="kVcDWCellBtnNameDeposit">Deposit</string>
    <string name="kVcDWCellBtnNameWithdraw">Withdraw</string>
    <string name="kVcDWHelpGatewayAssets">Gateway assets(%s)</string>
    <string name="kVcDWTipsCopyOK">Copied</string>
    <string name="kVcDWTipsDisableDeposit">Deposits have been disabled.</string>
    <string name="kVcDWTipsDisableWithdraw">Withdrawls have been disabled.</string>
    <string name="kVcDWTipsGatewayNotAvailable">The current gateway service is not available. please try again later.</string>
    <string name="kVcDWCellBtnCopyAddr">Copy address</string>
    <string name="kVcDWCellBtnCopyMemo">Copy memo or tag</string>
    <string name="kVcDWTipsCopyAddrOK">Address copied</string>
    <string name="kVcDWTipsCopyMemoOK">Memo copied</string>
    <string name="kVcDWTipsImportantTitle">[IMPORTANT]</string>
    <string name="kVcDWTipsMinDepositAmount">Minimum deposits number: %s%s. Less than the minimum amount will not be credited and cannot be returned.\n</string>
    <string name="kLoginBtnRegister">Register</string>
    <string name="kVcTitleRank">Rank</string>
    <string name="kNormalCellBtnLogin">Login</string>
    <string name="kBtnBack">Back</string>
    <string name="kSignIn">Sign in</string>
    <string name="kSignUp">Sign up</string>
    <string name="kSkip">Skip</string>
    <string name="app_description">Current mobile application allows to register through Account Model. Account Model enable to manage the account from anywhere, using only password and without loading .bin file.\n\n\nKeys for Account will be received with using your password. They won\'t be saved in browser or central server, that\'s why it is necessary  to make sure that you\'ve recognized the password.\n\n\nPlease enter desired account name. This name will be registered openly in blockchain and be the identifier for any of your transactions.\n\n\nThe name should include more than 6 characters with dash, numbers and u.c.</string>
    <string name="continue_registration">To continue the registration</string>
    <string name="account_name">Account name</string>
    <string name="create_password">Create the password</string>
    <string name="confirm_password">Confirm the password</string>
    <string name="reg_checkbox_1">I realize that I will lose access to my funds if I lose my password</string>
    <string name="reg_checkbox_2">I realize, that nobody can restore my password if I lose or forget it</string>
    <string name="reg_checkbox_3">I wrote down or have saved in the other way my password</string>
    <string name="create_account_activity_button">SIGN UP</string>
    <string name="network_of_digital_cash_and_decentralized_exchange">Network of digital cash and decentralized exchange</string>
</resources>