<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".SignUpInfoActivity"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/layout_back"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_btn_back"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/kNavigationBarTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/kBtnBack" />
        </LinearLayout>

        <TextView
            android:id="@+id/title"
            style="@style/kNavigationBarTextStyle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/kSignUp" />

    </FrameLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        android:text="@string/app_description"
        android:textColor="#dddbd5"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/sign_up_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_description"
                android:textColor="#dddbd5"
                android:textSize="17sp" />
        </LinearLayout>
    </ScrollView>


    <TextView
        android:id="@+id/sign_up_next"
        style="@style/EvrazTextViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:paddingStart="32dp"
        android:paddingTop="8dp"
        android:paddingEnd="32dp"
        android:paddingBottom="8dp"
        android:text="@string/continue_registration"
        android:textAllCaps="true"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>