<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLaunch">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/launch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.btsplusplus.fowallet.indictorView.AVLoadingIndicatorView
        android:layout_height="32dp"
        style="@style/AVLoadingIndicatorView.Small"
        android:visibility="visible"
        app:indicatorName="BallSpinFadeLoaderIndicator"
        app:indicatorColor="@color/theme01.textColorMain"
        android:id="@+id/loadingIndicator"
        android:layout_width="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:layout_marginTop="140dp" />

    <LinearLayout
        android:id="@+id/buttonBar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="313dp"
            android:layout_height="98dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            style="@style/EvrazTitle"
            android:text="@string/network_of_digital_cash_and_decentralized_exchange" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btnSignIn"
            style="@style/EvrazTextViewButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kSignIn" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/EvrazTextViewButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kSignUp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btnSkip"
            style="@style/EvrazTextViewButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kSkip" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>