<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme01.appBackColor"
    tools:context=".ActivityLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:padding="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_back_from_login"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_btn_back" />

                <TextView
                    style="@style/kNavigationBarTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/kBtnBack" />
            </LinearLayout>

            <TextView
                android:id="@+id/title"
                style="@style/kNavigationBarTextStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/kNormalCellBtnLogin" />

            <Button
                android:id="@+id/button_register"
                style="@style/kNavigationBarTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:background="#00000000"
                android:text="@string/kLoginBtnRegister"
                android:textAllCaps="false" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="48dp">
        </FrameLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>