<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAssetInfos"
    android:background="@color/theme01.appBackColor">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:orientation="vertical">

        <!-- 导航栏 -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/layout_back_from_diya_ranking"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_btn_back"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/kBtnBack"
                    style="@style/kNavigationBarTextStyle"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:text="@string/kVcTitleRank"
                style="@style/kNavigationBarTextStyle" />

            <Button
                android:id="@+id/btn_select_assets"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="#00000000"
                style="@style/kNavigationBarTextStyle"
                android:text="@string/kDebtLableSelectAsset"
                android:textAllCaps="false"
                android:layout_marginRight="10dp" />

        </FrameLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tablayout_of_diya_ranking"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:tabTextAppearance="@style/KPageTabTextStyle"
            app:tabIndicatorColor="#ff0000"
            app:tabRippleColor="#aaaaaa"
            app:tabTextColor="#ffffff">

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager_of_diya_ranking"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.viewpager.widget.ViewPager>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>